<resources>
    <string name="app_name">TomTom</string>
    <string name="LoginFragment_layout_mctf_logo">M*CTF logo</string>
    <string name="LoginFragment_layout_app_promo">Mobile application of the Unified Information System in the field of CTF-procurement</string>
    <string name="LoginFragment_layout_form_username">Username</string>
    <string name="LoginFragment_layout_form_password">Password</string>
    <string name="LoginFragment_layout_form_button_send">Sign in</string>
    <string name="LoginFragment_layout_form_switchToRegister">Don\'t have an account? Sign up!</string>
    <string name="RegisterFragment_layout_form_firstName">First name</string>
    <string name="RegisterFragment_layout_form_lastName">Last name</string>
    <string name="RegisterFragment_layout_form_button_send">sign up</string>
    <string name="RegisterFragment_layout_form_switchToLogin">Already have an account? Sign in!</string>
    <string name="RegisterFragment_layout_form_serverUrl">Server URL</string>
    <string name="LoginFragment_error_fieldIsEmpty">Field cannot be empty</string>
    <string name="NewContractFragment_layout_name_hint">Name</string>
    <string name="NewContractFragment_layout_description_hint">Description</string>
    <string name="NewContractFragment_layout_price_hint">Price</string>
    <string name="NewContractFragment_layout_attachment_hint">Attachment</string>
    <string name="NewContractFragment_layout_selectAttach_text">Select</string>
    <string name="NewContractFragment_layout_execute">Send</string>
    <string name="NewContractFragment_result_success">Success!</string>
    <string name="ContractsListFragment_result_error">Failed to refresh contracts: %s</string>
    <string name="ContractAdapter_price_template">%.2f rub.</string>
    <string name="ContractAdapter_status_processing">Processing</string>
    <string name="ContractAdapter_status_accepted">Accepted</string>
    <string name="ContractAdapter_status_rejected">Rejected</string>
    <string name="ContractAdapter_status_unknown">Unknown</string>
    <string name="ContractAdapter_status_template">"Status: "</string>
    <string name="ContractDetailsFragment_result_error">Failed to get details: %s</string>
    <string name="ContractDetailsFragment_layout_saveAttachment_text">Save attachment</string>
    <string name="ContractDetailsFragment_layout_status_hint">Status</string>
    <string name="ContractDetailsFragment_layout_createdAt_hint">Created at</string>
    <string name="ContractDetailsFragment_layout_creator_username_hint">Creator username</string>
    <string name="ContractDetailsFragment_layout_creator_firstName_hint">Creator first name</string>
    <string name="ContractDetailsFragment_layout_creator_lastName_hint">Creator last name</string>
    <string name="ProfileFragment_layout_form_apply">Apply</string>
    <string name="ProfileFragment_layout_form_logout">Logout</string>
    <string name="ProfileFragment_request_fail">Can not retrieve account information: %s</string>
    <string name="ProfileFragment_edit_request_fail">Request failed: %s</string>
    <string name="NavigationMenu_contracts">Contracts</string>
    <string name="NavigationMenu_newContract">New contract</string>
    <string name="NavigationMenu_profile">Profile</string>
</resources>
