<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_editMe_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LoginFragment_layout_form_username"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_editMe_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LoginFragment_layout_form_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_editMe_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RegisterFragment_layout_form_firstName"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_editMe_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RegisterFragment_layout_form_lastName"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_editMe_serverUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RegisterFragment_layout_form_serverUrl"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Button_editMe_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ProfileFragment_layout_form_logout" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/Button_editMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border"
            android:layout_gravity="center"
            android:text="@string/ProfileFragment_layout_form_apply"
            android:textSize="17sp"
            app:initialCornerAngle="16dp" />

    </LinearLayout>

</ScrollView>
