<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.ContractDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewContractFragment_layout_name_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_contractDetails_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:gravity="top"
                android:hint="@string/NewContractFragment_layout_description_hint"
                android:inputType="textLongMessage|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewContractFragment_layout_price_hint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Button_contractDetails_attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ContractDetailsFragment_layout_saveAttachment_text"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContractDetailsFragment_layout_status_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_createdAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContractDetailsFragment_layout_createdAt_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_user_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContractDetailsFragment_layout_creator_username_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_user_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContractDetailsFragment_layout_creator_firstName_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_contractDetails_user_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ContractDetailsFragment_layout_creator_lastName_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</ScrollView>
