<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        tools:context=".ui.main.fragments.NewContractFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_newContract_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_newContract_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewContractFragment_layout_name_hint"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_newContract_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_newContract_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/NewContractFragment_layout_description_hint"
                android:inputType="textLongMessage|textMultiLine"
                android:maxLines="10"
                android:minLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_newContract_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditText_newContract_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewContractFragment_layout_price_hint"
                android:inputType="numberDecimal"
                android:text="1337"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_newContract_attachPath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditText_newContract_attachPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/NewContractFragment_layout_attachment_hint"
                    android:inputType="textShortMessage"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/Button_newContract_selectAttach"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/NewContractFragment_layout_selectAttach_text" />

        </LinearLayout>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/Button_newContract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_border"
            android:text="@string/NewContractFragment_layout_execute"
            android:textSize="17sp"
            app:initialCornerAngle="16dp" />

    </LinearLayout>
</ScrollView>
